<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/download_file_fragment_background"
    android:padding="5dp"
    tools:context="com.flame4ost.asynctaskdownloader.DownloadFileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:gravity="center"
                    android:text="@string/file54"
                    android:textSize="24sp"
                    android:layout_marginEnd="3dp" />

                <TextView
                    android:id="@+id/textViewCurrentFileName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/number4"
                    android:textSize="24sp"
                    android:layout_marginStart="3dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButtonFileDownloadingCancel"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="3dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/file_downloading_cancel"
                    android:layout_marginEnd="3dp"
                    android:contentDescription="@string/todo6465" />

                <ProgressBar
                    android:id="@+id/progressBarDownloadingIndicator"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:max="100"
                    android:progress="0"
                    android:layout_marginStart="3dp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButtonFileDownloadingPause"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/file_downloading_pause"
                android:contentDescription="@string/todo78" />

            <TextView
                android:id="@+id/textViewTimeCountdown"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0005"
                android:textColor="@android:color/holo_red_light"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/imageButtonFileDownloadingResume"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/file_downloading_resume"
                android:contentDescription="@string/todo76" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
